Bug 1177727 - MessagePort should call RemoveObserver before calling Release(), r=mccr8